methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:33: error: not found: value c
def makeLine() {for (stepper <- 1 to 3) {makeV(c:Color)
                                               ^