methods.picture.MethodsPicture.scala.code
override def run() {
  for (stepper <- 1 to 3) {
    makeLine()
    left()
    for (stepper <- 1 to 5) {
      forward()
    }
    right()
  }
}



def makeV(c: Color) {
  					 forward()
  					 setBrushColor(c: Color)
             paint()
             forward()
             left()
             forward()
             paint()
             backward()
             right()
             forward()
             paint()
						 forward()
             left()}


def paint() {brushDown()
             brushUp()}

def makeLine() {for (stepper <- 1 to 3) {makeV(c:Color)
                                         for (stepper <- 1 to 5) {forward()}}}